update(rebalance): api config
