# swagger_server/controllers/rebalance_controller.py
@@ -1,19 +1,16 @@
 import connexion
 
 from exchange.logic.exchange_logic import ExchangeLogic
-from swagger_server.models.rebalance_toggle_request import RebalanceToggleRequest  # noqa: E501
+from swagger_server.models.rebalance_config_request import RebalanceConfigRequest
 from swagger_server import util
 
-def rebalance_toggle_post(ToggleRequest):  # noqa: E501
-    """Toggle auto rebalance on/off
-    body: {"enable": true/false}
-    """
+def rebalance_config_post(ConfigRequest):
     if connexion.request.is_json:
-        body = RebalanceToggleRequest.from_dict(connexion.request.get_json())  # noqa: E501
-    return ExchangeLogic.rebalance_toggle_post(ToggleRequest)
+        ConfigRequest = RebalanceConfigRequest.from_dict(connexion.request.get_json())
+    return ExchangeLogic.rebalance_config_post(ConfigRequest)
 
 
-def rebalance_status_get():  # noqa: E501
+def rebalance_status_get():
     """Get auto rebalance status
     """
     return ExchangeLogic.rebalance_status_get()
