# swagger_server/models/rebalance_config_request.py
@@ -1,0 +1,102 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class RebalanceConfigRequest(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(
+        self,
+        enabled: bool = None,
+        usdt_ratio: float = None,
+        coin_ratio: float = None,
+        usdt_threshold: float = None,
+        coin_threshold: float = None
+    ):  # noqa: E501
+        """RebalanceConfigRequest - a model defined in Swagger
+
+        :param enabled: Whether auto rebalance is enabled.
+        :type enabled: bool
+        :param usdt_ratio: Ratio for USDT side.
+        :type usdt_ratio: float
+        :param coin_ratio: Ratio for coin side.
+        :type coin_ratio: float
+        :param usdt_threshold: Threshold for USDT rebalance trigger.
+        :type usdt_threshold: float
+        :param coin_threshold: Threshold for coin rebalance trigger.
+        :type coin_threshold: float
+        """
+
+        self.swagger_types = {
+            'enabled': bool,
+            'usdt_ratio': float,
+            'coin_ratio': float,
+            'usdt_threshold': float,
+            'coin_threshold': float,
+        }
+
+        self.attribute_map = {
+            'enabled': 'enabled',
+            'usdt_ratio': 'usdt_ratio',
+            'coin_ratio': 'coin_ratio',
+            'usdt_threshold': 'usdt_threshold',
+            'coin_threshold': 'coin_threshold',
+        }
+
+        self._enabled = enabled
+        self._rebalance_usdt_ratio = usdt_ratio
+        self._rebalance_coin_ratio = coin_ratio
+        self._rebalance_usdt_threshold = usdt_threshold
+        self._rebalance_coin_threshold = coin_threshold
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RebalanceConfigRequest':
+        """Returns the dict as a model"""
+        return util.deserialize_model(dikt, cls)
+
+    # ---- Property definitions ----
+    @property
+    def enabled(self) -> bool:
+        return self._enabled
+
+    @enabled.setter
+    def enabled(self, enabled: bool):
+        self._enabled = enabled
+
+    @property
+    def usdt_ratio(self) -> float:
+        return self._rebalance_usdt_ratio
+
+    @usdt_ratio.setter
+    def usdt_ratio(self, value: float):
+        self._rebalance_usdt_ratio = value
+
+    @property
+    def coin_ratio(self) -> float:
+        return self._rebalance_coin_ratio
+
+    @coin_ratio.setter
+    def coin_ratio(self, value: float):
+        self._rebalance_coin_ratio = value
+
+    @property
+    def usdt_threshold(self) -> float:
+        return self._rebalance_usdt_threshold
+
+    @usdt_threshold.setter
+    def usdt_threshold(self, value: float):
+        self._rebalance_usdt_threshold = value
+
+    @property
+    def coin_threshold(self) -> float:
+        return self._rebalance_coin_threshold
+
+    @coin_threshold.setter
+    def coin_threshold(self, value: float):
+        self._rebalance_coin_threshold = value
