# swagger_server/models/rebalance_toggle_request.py
@@ -1,43 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class RebalanceToggleRequest(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, enable: bool = None):  # noqa: E501
-        """RebalanceToggleRequest - a model defined in Swagger
-
-        :param enable: The enable of this RebalanceToggleRequest.  # noqa: E501
-        :type enable: bool
-        """
-        self.swagger_types = {
-            'enable': bool
-        }
-
-        self.attribute_map = {
-            'enable': 'enable'
-        }
-
-        self._enable = enable
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'RebalanceToggleRequest':
-        """Returns the dict as a model"""
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def enable(self) -> bool:
-        """Gets the enable of this RebalanceToggleRequest."""
-        return self._enable
-
-    @enable.setter
-    def enable(self, enable: bool):
-        """Sets the enable of this RebalanceToggleRequest."""
-        self._enable = enable
